<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.17">
  <DUT Name="ST_1101_Position_initialized" Id="{43a82b49-8e9a-4bd3-a77a-516810f5c448}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_1101_Position_initialized EXTENDS ST_SupervisorHeader :
	STRUCT
		X					  : REAL;  //	X-map coordinate OF the new position in meters
		Y					  : REAL;  //	Y-map coordinate of the new position in meters
		H					  : REAL;  //	Heading of the new position on the map in radians
		Floor				  : UDINT; //		The floor of the new position
		Initialization_result : UINT;  (*	0 - Failure
		The position initialization can fail for example if
			- A good position is not found within pos_ini_max_d..-parameters from the given pos init point
			- A good position is not found within value of pos_init_max_wait_time-parameter
			- The AGV is not stationary state, it is performing load or there are scanner related errors active.
		1 - Success
			- A good position was found near the given position initialization point and position was successfully initialized.*)
		Position_confidence : UINT; //		Position confidence percentage (1 - 100%)Describes how well the laser measurements in the new position matches the seen environment.	
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>